<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ativity.loginActivity"
    android:background="@drawable/welcome"
    android:orientation="vertical"
    android:padding="10dp">
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/logo"
        android:transitionName="logo_image"
        />
    <TextView
        android:id="@+id/slo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bangers"
        android:text="@string/loginslo1"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:transitionName="slogan_text"
        />
    <TextView
        android:id="@+id/slo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bangers"
        android:text="@string/loginslo2"
        android:textColor="@color/black"
        android:textSize="18sp" />
    <LinearLayout
        android:id="@+id/formlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/signupform"
        android:orientation="vertical"
        android:padding="15dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:fontFamily="@font/bangers"
            android:text="@string/Username"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Username"
            android:textColorHint="@color/black"
            android:theme="@style/football"
            app:boxStrokeColor="#000000"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:hintTextColor="#000000"
            app:startIconDrawable="@drawable/user"
            app:startIconTint="@color/black"
            app:suffixTextColor="#000000"
            android:id="@+id/usernamelg">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>
<!--        <EditText-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/Username"-->
<!--            android:textColorHint="@color/black"-->
<!--            app:boxStrokeColor="#000000"-->
<!--            android:id="@+id/usernamelg"-->
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:fontFamily="@font/bangers"
            android:text="@string/Password"
            android:textColor="@color/black"/>
<!--        <EditText-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/Password"-->
<!--            android:textColorHint="@color/black"-->
<!--            app:boxStrokeColor="#000000"-->
<!--            android:id="@+id/passwordlg"/>-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:textColorHint="@color/black"
            android:theme="@style/football"
            app:boxStrokeColor="#000000"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:hintTextColor="#000000"
            app:startIconDrawable="@drawable/password"
            app:startIconTint="@color/black"
            android:id="@+id/passwordlg">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonsignup"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/shapebutton"
                android:text="@string/buttonGoSignup"
                android:textSize="10dp" />

            <Button
                android:id="@+id/test"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="@drawable/shapebutton"
                android:text="@string/buttonGofindaccount"
                android:textColorHint="@color/black"
                android:textSize="10dp" />
        </LinearLayout>
        <Button
            android:id="@+id/gohome"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/shapebutton2"
            android:text="@string/buttonEnter" />
    </LinearLayout>
</LinearLayout>