<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ativity.homepage"
    android:background="@color/gray1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:src="@drawable/searchicon"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_page"
            android:textSize="36dp"
            android:textColor="@color/black"
            android:padding="10dp"
            android:fontFamily="@font/wendy_one"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hi"
                android:textSize="26dp"
                android:textColor="@color/black"
                android:padding="10dp"
                android:fontFamily="@font/wendy_one"
                />
            <TextView
                android:id="@+id/namelg"
                android:layout_marginLeft="-5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="26dp"
                android:textColor="@color/black"
                android:fontFamily="@font/wendy_one"
                />
        </LinearLayout>
        //newspaper
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/buttonnewspaper"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="@drawable/button_sc"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/newspape">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/baloo"
                    android:padding="25dp"
                    android:text="@string/newspaper"
                    android:textColor="@color/black"
                    android:textSize="30dp" />
            </RelativeLayout>
            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="-20dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/newspaper" />
        </RelativeLayout>
        //booking
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/buttonbooking"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="@drawable/button_sc"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/booking_bg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/baloo"
                    android:text="@string/booking"
                    android:textColor="@color/black"
                    android:textSize="30dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="50dp"
                    android:fontFamily="@font/baloo"
                    android:text="@string/pitches"
                    android:textColor="@color/black"
                    android:textSize="30dp" />
            </RelativeLayout>
            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_alignParentRight="true"
                app:lottie_rawRes="@raw/booking"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                />
        </RelativeLayout>
        //history
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/buttonhistory"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="@drawable/button_sc"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/history_bg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/baloo"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/history"
                    android:textColor="@color/white"
                    android:textSize="30dp"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/history"
                android:layout_marginTop="-10dp"/>
        </RelativeLayout>
        //User
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/buttonuser"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="@drawable/button_sc"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/username_bg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/baloo"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/user"
                    android:textColor="@color/white"
                    android:textSize="30dp"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginLeft="15dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/user" />
        </RelativeLayout>
        <Button
            android:id="@+id/buttonlognout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/buttonlognout"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="30dp"
            android:text="@string/log_out"
            android:textColor="@color/black"/>
    </LinearLayout>

</ScrollView>